--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hennge/vue3-pagination": "^1.0.17",
     "@vee-validate/rules": "^4.15.0",
     "axios": "^1.7.9",
     "pinia": "^2.2.6",
-    "sweetalert2": "^11.15.3",
+    "sweetalert2": "^11.6.13",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
     "vue-sweetalert2": "^5.0.11"
